Update the OpenLibrary source to fetch work author when needed

The Search API endpoint may be more appropriate for Tellico, given the
guidance in https://github.com/internetarchive/openlibrary/issues/8144
which would decrease the number of calls needed to fetch the full author
list.

BUG: 504586
FIXED-IN: 4.1.3